# MangaReader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: circle.rs  image_c.rs  main.rs  theme.rs  viewer.rs  widget.rs  zoom.rs
