[package]
name = "MangaReader"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
iced = {version = "0.13.1", features = ["debug", "image", "svg"]}
zip = {version = "2.4", default-features = false, features = ["deflate", "deflate-flate2", "deflate-zopfli", "deflate64", "lzma", "lzma", "zstd"]}
directories = "5.0"
iced_aw = {version = "0.12", default-features = false, features = ["context_menu"]}
bitcode = { version = "0.6", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
